--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,18 @@
 
   <name>helloworldmaven</name>
   <url>http://maven.apache.org</url>
+  <modules>
+    <module>helloworldmvc.contract</module>
+    <module>helloworldmvc.controller</module>
+    <module>helloworldmvc.model</module>
+    <module>helloworldmvc.view</module>
+    <module>helloworldmvc.main</module>
+  </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
   </properties>
 
   <dependencies>
